# python-project-49

./: README.md  READMY.md  pyproject.toml
brain_games/: engine.py
brain_games/games/: calculator.py  gcd.py  is_even.py  is_prime.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_nod.py  brain_prime.py  brain_progression.py
