[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[tool.poetry]
name = "hexlet-code"
version = "0.2.0"
description = ""
authors = ["Pavel Ilchenko <arisesinmight@gmail.com>"]
readme = "README.md"
packages = [{include = "brain_games"},
            { include = "brain_games" }]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

