[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:brain_even"
brain-calc = "brain_games.scripts.brain_calc:brain_calc"
brain-nod = "brain_games.scripts.brain_nod:brain_nod"
brain-progression = "brain_games.scripts.brain_progression:brain_progression"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[tool.poetry]
name = "hexlet-code"
version = "0.6.0"
description = ""
authors = ["Pavel Ilchenko <arisesinmight@gmail.com>"]
readme = "README.md"
packages = [{include = "brain_games"},
            { include = "brain_games" }]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
